# AgentOperatingSystem

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ALWAYS_ON_SUMMARY.md  ARCHITECTURE.md  AgentOperatingSystem.py  AgentTeam.py  BREAKING_CHANGES.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_LEVEL_MERGE_COMPLETE.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_VERIFICATION.md  CONTRIBUTING.md  DEPLOYMENT_DOCS_SUMMARY.md  FOUNDRY_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LeadershipAgent.py  LeadershipOrchestrator.py  MIGRATION.md  MLPipelineManager.py  PERPETUAL_AGENTS_SUMMARY.md  PYLINT_FIXES_SUMMARY.md  PerpetualAgent.py  QUICK_MIGRATION.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  REGIONAL_HANDLING_SUMMARY.md  ROADMAP.md  UPGRADE_SUMMARY.md  __init__.py  config.py  decision_engine.py  features.md  final_verification.py  function_app.py  host.json  local.settings.json  (+8 more)
.github/: ONBOARDING_VALIDATION.md  PYLINT_IMPLEMENTATION_SUMMARY.md  PYLINT_QUICKREF.md  README.md  copilot-instructions.md
AgentOperatingSystem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aos/: __init__.py
azure_functions/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  setup_infrastructure.sh
data/: learning_interactions.json.json
deployment/: .gitignore  CLEANUP_SUMMARY.md  Deploy-AOS.ps1  MIGRATION_GUIDE.md  ORCHESTRATOR_USER_GUIDE.md  QUICKSTART.md  README.md  REFACTORING_RECOMMENDATIONS.md  REGIONAL_REQUIREMENTS.md  deploy.py  main-modular.bicep  main-modular.json  main.bicep  main.json  parameters.dev.json  parameters.prod.json
docs/: AOS_ENHANCEMENT_REQUESTS.md  AOS_FURTHER_ENHANCEMENTS.md  API-REFERENCE.md  APP_CONFIGURATION.md  ARCHITECTURE.md  CODE_ORGANIZATION.md  CODE_QUALITY_STACK.md  CODE_QUALITY_STATUS.md  CODE_QUALITY_UPDATE_SUMMARY.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  Implementation.md  LORAX_IMPLEMENTATION_SUMMARY.md  LORAX_ORCHESTRATION.md  LORAX_QUICKSTART.md  MCP_SELF_LEARNING.md  MIGRATION_STATUS.md  README.md  REPOSITORY_SPLIT_PLAN.md  SelfLearning-2.md  agent-configuration-architecture.md  agent-configuration-schema.md  architecture.md  deployment.md  performance.md  quickstart.md  self_learning.md
docs/agent-repositories/aos-client-sdk/: README.md  pyproject.toml
docs/agent-repositories/aos-client-sdk/examples/: strategic_review.py
docs/agent-repositories/aos-client-sdk/src/aos_client/: __init__.py  app.py  cli.py  client.py  deployment.py  mcp.py  models.py  service_bus.py  testing.py
docs/agent-repositories/aos-client-sdk/tests/: test_client.py  test_foundry.py  test_mcp.py  test_models.py  test_observability.py  test_service_bus.py  test_v5_enhancements.py
docs/agent-repositories/aos-deployment/: README.md  pyproject.toml
docs/agent-repositories/aos-deployment/.github/: copilot-instructions.md
docs/agent-repositories/aos-deployment/.github/workflows/: infrastructure-deploy.yml  infrastructure-drift-detection.yml  infrastructure-governance.yml
docs/agent-repositories/aos-deployment/deployment/: deploy.py  main-modular.bicep
docs/agent-repositories/aos-deployment/deployment/audit/: deploy_20260227_042106.json  deploy_20260227_042257.json  plan_20260227_042106.json  plan_20260227_042257.json
docs/agent-repositories/aos-deployment/deployment/modules/: ai-project.bicep  functionapp.bicep  monitoring.bicep  policy.bicep  servicebus.bicep  storage.bicep
docs/agent-repositories/aos-deployment/deployment/orchestrator/cli/: workflow_helper.py
docs/agent-repositories/aos-deployment/deployment/orchestrator/core/: config.py  manager.py
docs/agent-repositories/aos-deployment/deployment/orchestrator/governance/: rbac_manager.py
docs/agent-repositories/aos-deployment/deployment/tests/: test_lifecycle.py
docs/agent-repositories/aos-deployment/docs/: README.md
docs/agent-repositories/aos-function-app/: README.md  pyproject.toml
docs/agent-repositories/aos-function-app/.github/: copilot-instructions.md
docs/agent-repositories/aos-function-app/docs/: architecture.md
docs/agent-repositories/aos-function-app/src/: function_app.py
docs/agent-repositories/aos-function-app/tests/: test_function_app.py
docs/agent-repositories/aos-kernel/: README.md  pyproject.toml
docs/agent-repositories/aos-kernel/.github/: copilot-instructions.md
docs/agent-repositories/aos-kernel/docs/: README.md
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/: __init__.py  _foundry_internal.py  agent_operating_system.py
docs/agent-repositories/aos-kernel/src/AgentOperatingSystem/lora/: __init__.py  inference_client.py  orchestration_router.py  registry.py
docs/agent-repositories/aos-kernel/tests/: test_kernel.py  test_lora.py
docs/agent-repositories/aos-mcp-servers/: README.md  pyproject.toml
docs/agent-repositories/aos-mcp-servers/.github/: copilot-instructions.md
docs/agent-repositories/aos-mcp-servers/src/: function_app.py
docs/agent-repositories/aos-mcp-servers/src/aos_mcp_servers/: __init__.py  routing.py
docs/agent-repositories/aos-mcp-servers/tests/: test_mcp_routing.py
docs/agent-repositories/aos-realm-of-agents/: README.md  pyproject.toml
docs/agent-repositories/aos-realm-of-agents/.github/: copilot-instructions.md
docs/agent-repositories/aos-realm-of-agents/src/: function_app.py
docs/agent-repositories/aos-realm-of-agents/tests/: test_realm_of_agents.py
docs/agent-repositories/business-infinity/: README.md  pyproject.toml
docs/agent-repositories/business-infinity/src/: function_app.py
docs/agent-repositories/business-infinity/src/business_infinity/: __init__.py  workflows.py
docs/agent-repositories/business-infinity/tests/: test_workflows.py
examples/: README.md  always_on_agents_example.py  always_on_demo_standalone.py  dpo_training_example.py  foundry_agent_service_example.py  lorax_multi_agent_example.py  perpetual_agents_demo.py  perpetual_agents_example.py  platform_integration_example.py
knowledge/: domain_knowledge.json
mcp_protocol/: mcp_response.py
old/: AgentOperatingSystem.py  LeadershipOrchestrator.py  __init__.py  aos_auth.py  aos_core.py  (+13 more)
(+407 files in other folders)
