[project]
name = "AgentOperatingSystem"
version = "1.1.0"
description = "Agent Operating System (AOS) - Foundational infrastructure for agent-based applications"
authors = [
    { name = "ASISaga" }
]
requires-python = ">=3.8"
dependencies = [
    "asyncio",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "psutil>=5.9.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.1",
    "jsonschema>=4.0.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "agent-framework>=1.0.0b251218",
    "azure-ai-agents>=1.1.0",
    "azure-ai-projects>=1.0.0",
    "LeadershipAgent @ git+https://github.com/ASISaga/LeadershipAgent",
    "PurposeDrivenAgent @ git+https://github.com/ASISaga/PurposeDrivenAgent.git",

]

[project.optional-dependencies]
azure = [
    "azure-functions",
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.17.0",
    "azure-storage-queue>=12.7.0",
    "azure-data-tables>=12.4.0",
    "azure-servicebus>=7.11.0",
    "azure-keyvault-secrets>=4.7.0"
]
ml = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "trl>=0.7.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "mlflow>=2.8.0"
]
mcp = [
    "mcp",
    "websockets>=11.0.0"
]
dev = [
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]
full = [
    "AgentOperatingSystem[azure,ml,mcp]"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["AgentOperatingSystem*"]


[project.urls]
Homepage = "https://github.com/ASISaga/AgentOperatingSystem"
Repository = "https://github.com/ASISaga/AgentOperatingSystem"
Documentation = "https://github.com/ASISaga/AgentOperatingSystem/docs"

[tool.pylint.main]
# Use multiple processes to speed up Pylint
jobs = 0

# Pickle collected data for later comparisons
persistent = true

# Minimum Python version to use for version dependent checks
py-version = "3.8"

# Discover python modules and packages in the file system subtree
recursive = true

[tool.pylint.messages_control]
# Disable specific warnings that are not relevant for this async, Azure-focused codebase
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "fixme",
    "broad-exception-caught",
    "line-too-long",  # Black/formatters handle this
    "import-error",  # Some imports are from external git repos
    "no-name-in-module",  # Azure modules sometimes have dynamic imports
    "logging-too-many-args",  # False positive in Pylint 4.0.4 for valid logging patterns
    "logging-fstring-interpolation",  # Complex cases require significant refactoring
    "undefined-all-variable",  # E0603 - __all__ dynamically generated in some modules
    "no-member",  # E1101 - Azure SDK has dynamic attributes
    "too-many-positional-arguments",  # R0917 - API design decision
    "attribute-defined-outside-init",  # W0201 - Async initialization pattern
    "unused-argument",  # W0613 - Required by interfaces/protocols
    "protected-access",  # W0212 - Intentional for framework internals
    "no-else-return",  # R1705 - Readability preference
    "wrong-import-position",  # C0413 - Conditional imports for TYPE_CHECKING
    "import-outside-toplevel",  # C0415 - Lazy imports for performance
    "too-many-return-statements",  # R0911 - Complex business logic
    "duplicate-code",  # R0801 - Some duplication acceptable for clarity
    "invalid-name",  # C0103 - Many valid short names in context (e.g., 'i', 'x', 'df')
    "unused-variable",  # W0612 - Some variables kept for debugging/clarity
    "unnecessary-comprehension",  # W2301 - Sometimes clearer than alternatives
    "consider-iterating-dictionary",  # C0201 - Explicit .keys() can be clearer
    "undefined-variable",  # E0602 - Some dynamic/generated variables
    "bare-except",  # W0702 - Rare cases where needed for cleanup
    "broad-exception-raised",  # W0719 - Generic exceptions OK in some contexts
    "raising-bad-type",  # E0702 - Complex exception handling
    "inconsistent-return-statements",  # R1710 - Some paths intentionally different
    "redefined-argument-from-local",  # R1704 - Rare cases acceptable
    "redefined-builtin",  # W0622 - Some parameter names shadow builtins intentionally
    "f-string-without-interpolation",  # W1309 - Consistency with other f-strings
    "too-many-nested-blocks",  # R1702 - Complex business logic requires nesting
    "missing-timeout",  # W3101 - Some requests don't need timeouts
    "try-except-raise",  # W0707 - Logging before re-raise is intentional
    "unnecessary-lambda",  # W0108 - Sometimes clearer for callbacks
    "useless-object-inheritance",  # R1725 - Python 2/3 compatibility
    "unnecessary-pass",  # W0107 - Placeholder for future code
    "redefined-outer-name",  # W0621 - Some shadowing acceptable in limited scope
    "global-statement",  # W0603 - Rare cases where globals are appropriate
    "non-parent-init-called",  # W0233 - Multiple inheritance patterns
    "pointless-statement",  # W0105 - String literals used as comments
    "dangerous-default-value",  # W0102 - Intentional mutable defaults in some cases
    "no-else-break",  # R1723 - Readability preference
    "no-else-continue",  # R1720 - Readability preference
    "no-value-for-parameter",  # E1120 - Dynamic parameter passing
    "too-many-format-args",  # E1121 - False positives in format strings
    "function-redefined",  # E0102 - Intentional overwriting in some cases
    "superfluous-parens",  # C0325 - Clarity preference
    "trailing-whitespace",  # C0303 - Formatting handled by formatters
    "not-callable",  # E1102 - Dynamic callables
    "unpacking-non-sequence",  # E1131 - Dynamic unpacking
    "non-parent-init-called",  # W0233 - Multiple inheritance patterns
    "unsupported-binary-operation",  # E1131 - Type union syntax for Python 3.10+
    "raise-missing-from",  # W0707 - Sometimes re-raise without chaining is intentional
    "unnecessary-ellipsis",  # W2301 - Ellipsis used as placeholder in interfaces
    "no-else-raise",  # R1720 - Readability preference
    "too-many-function-args",  # E1121 - False positives with keyword arguments
    "abstract-method",  # W0223 - Partial implementation OK in some cases
    "pointless-string-statement",  # W0105 - Module-level strings for documentation
]

# Enable specific warnings
enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.reports]
# Set the output format
output-format = "colorized"

# Tells whether to display a full report or only the messages
reports = false

# Activate the evaluation score
score = true

[tool.pylint.format]
# Maximum number of characters on a single line (PEP 8 recommends 79)
max-line-length = 120

# Maximum number of lines in a module
max-module-lines = 1500

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "os", "fs", "pk", "df"]

# Regular expression matching correct function names
function-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct variable names
variable-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct constant names
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"

# Regular expression matching correct attribute names
attr-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct argument names
argument-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct class attribute names
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,50}|(__.*__))$"

# Regular expression matching correct class names
class-rgx = "[A-Z_][a-zA-Z0-9]+$"

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 10

# Maximum number of attributes for a class
max-attributes = 15

# Maximum number of boolean expressions in an if statement
max-bool-expr = 5

# Maximum number of branch for function / method body
max-branches = 15

# Maximum number of locals for function / method body
max-locals = 20

# Maximum number of parents for a class
max-parents = 7

# Maximum number of public methods for a class
max-public-methods = 25

# Maximum number of return / yield for function / method body
max-returns = 6

# Maximum number of statements in function / method body
max-statements = 60

# Minimum number of public methods for a class
min-public-methods = 0

[tool.pylint.exceptions]
# Exceptions that will emit a warning when caught
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.imports]
# Allow wildcard imports from typing for type hints
allow-wildcard-with-all = true

[tool.pylint.logging]
# Format style used to check logging format string
logging-format-style = "new"

[tool.pylint.miscellaneous]
# List of note tags to take in consideration
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.similarities]
# Minimum lines number of a similarity
min-similarity-lines = 10

# Ignore comments when computing similarities
ignore-comments = true

# Ignore docstrings when computing similarities
ignore-docstrings = true

# Ignore imports when computing similarities
ignore-imports = true

[tool.pylint.spelling]
# Limits count of emitted suggestions for spelling mistakes
max-spelling-suggestions = 4

[tool.pylint.typecheck]
# List of decorators that produce context managers
contextmanager-decorators = ["contextlib.contextmanager"]

# List of members which are set dynamically and missed by pylint inference
generated-members = ["REQUEST", "acl_users", "aq_parent"]

# Tells whether missing members accessed in mixin class should be ignored
ignore-mixin-members = true

# Tells whether to warn about missing members when the owner of the attribute is inferred to be None
ignore-none = true

# This flag controls whether pylint should warn about no-member and similar checks whenever an opaque object is returned when inferring
ignore-on-opaque-inference = true
