[project]
name = "AgentOperatingSystem"
version = "2.0.0"
description = "Agent Operating System (AOS) - Production-grade operating system for perpetual, purpose-driven AI agents"
authors = [
    { name = "ASISaga" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.0",
    "pydantic>=2.12.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "psutil>=7.0.0",
    "PyJWT>=2.10.0",
    "cryptography>=45.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
]

[project.optional-dependencies]
azure = [
    "azure-functions>=1.21.0",
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.25.0",
    "azure-storage-queue>=12.13.0",
    "azure-data-tables>=12.7.0",
    "azure-servicebus>=7.14.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-ai-agents>=1.1.0",
    "azure-ai-projects>=1.0.0",
]
ml = [
    "transformers>=4.50.0",
    "torch>=2.6.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "trl>=0.16.0",
    "peft>=0.15.0",
    "accelerate>=1.5.0",
    "datasets>=3.5.0",
    "mlflow>=3.5.0",
]
mcp = [
    "mcp>=1.23.0",
    "websockets>=15.0",
]
dev = [
    "pylint>=3.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]
full = [
    "AgentOperatingSystem[azure,ml,mcp]",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["AgentOperatingSystem*"]


[project.urls]
Homepage = "https://github.com/ASISaga/AgentOperatingSystem"
Repository = "https://github.com/ASISaga/AgentOperatingSystem"
Documentation = "https://github.com/ASISaga/AgentOperatingSystem/docs"

[tool.pylint.main]
# Use multiple processes to speed up Pylint
jobs = 0

# Pickle collected data for later comparisons
persistent = true

# Minimum Python version to use for version dependent checks
py-version = "3.10"

# Discover python modules and packages in the file system subtree
recursive = true

[tool.pylint.messages_control]
# Disable specific warnings that are not relevant for this async, Azure-focused codebase
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "fixme",
    "broad-exception-caught",
    "line-too-long",  # Black/formatters handle this
    "import-error",  # Some imports are from external git repos
    "no-name-in-module",  # Azure modules sometimes have dynamic imports
]

# Enable specific warnings
enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.reports]
# Set the output format
output-format = "colorized"

# Tells whether to display a full report or only the messages
reports = false

# Activate the evaluation score
score = true

[tool.pylint.format]
# Maximum number of characters on a single line (PEP 8 recommends 79)
max-line-length = 120

# Maximum number of lines in a module
max-module-lines = 1500

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "os", "fs", "pk", "df"]

# Regular expression matching correct function names
function-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct variable names
variable-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct constant names
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"

# Regular expression matching correct attribute names
attr-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct argument names
argument-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct class attribute names
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,50}|(__.*__))$"

# Regular expression matching correct class names
class-rgx = "[A-Z_][a-zA-Z0-9]+$"

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 10

# Maximum number of attributes for a class
max-attributes = 15

# Maximum number of boolean expressions in an if statement
max-bool-expr = 5

# Maximum number of branch for function / method body
max-branches = 15

# Maximum number of locals for function / method body
max-locals = 20

# Maximum number of parents for a class
max-parents = 7

# Maximum number of public methods for a class
max-public-methods = 25

# Maximum number of return / yield for function / method body
max-returns = 6

# Maximum number of statements in function / method body
max-statements = 60

# Minimum number of public methods for a class
min-public-methods = 0

[tool.pylint.exceptions]
# Exceptions that will emit a warning when caught
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.imports]
# Allow wildcard imports from typing for type hints
allow-wildcard-with-all = true

[tool.pylint.logging]
# Format style used to check logging format string
logging-format-style = "new"

[tool.pylint.miscellaneous]
# List of note tags to take in consideration
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.similarities]
# Minimum lines number of a similarity
min-similarity-lines = 10

# Ignore comments when computing similarities
ignore-comments = true

# Ignore docstrings when computing similarities
ignore-docstrings = true

# Ignore imports when computing similarities
ignore-imports = true

[tool.pylint.spelling]
# Limits count of emitted suggestions for spelling mistakes
max-spelling-suggestions = 4

[tool.pylint.typecheck]
# List of decorators that produce context managers
contextmanager-decorators = ["contextlib.contextmanager"]

# List of members which are set dynamically and missed by pylint inference
generated-members = ["REQUEST", "acl_users", "aq_parent"]

# Tells whether missing members accessed in mixin class should be ignored
ignore-mixin-members = true

# Tells whether to warn about missing members when the owner of the attribute is inferred to be None
ignore-none = true

# This flag controls whether pylint should warn about no-member and similar checks whenever an opaque object is returned when inferring
ignore-on-opaque-inference = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark a test as an asyncio test",
    "integration: mark a test as an integration test",
    "slow: mark a test as slow",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
