[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aos-function-app"
version = "1.0.0"
description = "Main Azure Functions host for the Agent Operating System — Service Bus triggers and HTTP endpoints."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
requires-python = ">=3.10"
dependencies = [
    "aos-kernel[azure]>=3.0.0",
    "azure-functions>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-function-app"
Repository = "https://github.com/ASISaga/aos-function-app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
