[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aos-kernel"
version = "3.0.0"
description = "AOS kernel — orchestration, messaging, storage, auth, and core runtime services for the Agent Operating System."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
keywords = ["agent", "ai", "operating-system", "orchestration", "messaging", "aisaga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "purpose-driven-agent>=1.0.0",
    "agent-framework>=1.0.0rc1",
    "agent-framework-orchestrations>=1.0.0b260219",
    "pydantic>=2.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "httpx>=0.28.0",
    "PyJWT>=2.10.0",
    "cryptography>=44.0.0",
    "psutil>=6.0.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.16.0",
    "azure-storage-blob>=12.19.0",
    "azure-storage-queue>=12.8.0",
    "azure-data-tables>=12.5.0",
    "azure-servicebus>=7.12.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-monitor-opentelemetry>=1.6.0",
]
full = ["aos-kernel[azure]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-kernel"
Repository = "https://github.com/ASISaga/aos-kernel"
Issues = "https://github.com/ASISaga/aos-kernel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/AgentOperatingSystem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120
