[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aos-mcp-servers"
version = "1.0.0"
description = "Config-driven MCP server deployment for the Agent Operating System — deploy MCP servers via JSON registry."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
requires-python = ">=3.10"
dependencies = [
    "aos-kernel[azure]>=3.0.0",
    "azure-functions>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-mcp-servers"
Repository = "https://github.com/ASISaga/aos-mcp-servers"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
